--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -473,6 +473,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="ShippingBox.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Shop.h">
       <SubType>
       </SubType>
@@ -892,6 +896,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Scythe.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="ShippingBox.cpp">
       <SubType>
       </SubType>
     </ClCompile>
