--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -477,6 +477,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="ShippingBoxTop.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Shop.h">
       <SubType>
       </SubType>
@@ -900,6 +904,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="ShippingBox.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="ShippingBoxTop.cpp">
       <SubType>
       </SubType>
     </ClCompile>
