--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -322,6 +322,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Lewis.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MapColl.h">
       <SubType>
       </SubType>
@@ -452,10 +456,6 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="PlayerHouse.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="PlayLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -762,6 +762,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Lewis.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="MainUI.cpp">
       <SubType>
       </SubType>
@@ -886,10 +890,6 @@
     </ClCompile>
     <ClCompile Include="PlayerState.cpp" />
     <ClCompile Include="PlayerTile.cpp" />
-    <ClCompile Include="PlayLevel.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
     <ClCompile Include="Potato.cpp" />
     <ClCompile Include="Potato_Seeds.cpp">
       <SubType>
