--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -166,6 +166,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CustomData.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Effect.h">
       <SubType>
       </SubType>
@@ -427,10 +431,6 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="PlayerSpriteData.h" />
-    <ClInclude Include="LeftArrow.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
     <ClInclude Include="MainUI.h">
       <SubType>
       </SubType>
@@ -440,14 +440,6 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="MyHouse.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="PlayerBackGround.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
-    <ClInclude Include="PlayerCustomBoard.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -473,10 +465,6 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="RendererData.h" />
-    <ClInclude Include="RightArrow.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
     <ClInclude Include="Scythe.h">
       <SubType>
       </SubType>
@@ -601,6 +589,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CustomBoard.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="CustomData.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -766,10 +758,6 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="LeftArrow.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
     <ClCompile Include="Lewis.cpp">
       <SubType>
       </SubType>
@@ -872,14 +860,6 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="PlayerBackGround.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="PlayerCustomBoard.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
     <ClCompile Include="PlayerEnergyFrame.cpp">
       <SubType>
       </SubType>
@@ -904,10 +884,6 @@
     <ClCompile Include="PlayerTile.cpp" />
     <ClCompile Include="Potato.cpp" />
     <ClCompile Include="Potato_Seeds.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
-    <ClCompile Include="RightArrow.cpp">
       <SubType>
       </SubType>
     </ClCompile>
