--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -260,6 +260,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="FadeInOut.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="FixedPlayerColl.h">
       <SubType>
       </SubType>
@@ -682,6 +686,10 @@
     <ClCompile Include="DropStone.cpp" />
     <ClCompile Include="DropWood.cpp" />
     <ClCompile Include="EmptyItem.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="FadeInOut.cpp">
       <SubType>
       </SubType>
     </ClCompile>
