--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -170,6 +170,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DirtAnimation.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Effect.h">
       <SubType>
       </SubType>
@@ -513,6 +517,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="StoneAddAnimation.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="StoneEffect.h">
       <SubType>
       </SubType>
@@ -582,6 +590,10 @@
     <ClInclude Include="ItemCode.h" />
     <ClInclude Include="Weeds.h" />
     <ClInclude Include="WildHorseradish.h" />
+    <ClInclude Include="WoodAddAnimaition.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="WoodEffect.h">
       <SubType>
       </SubType>
@@ -597,6 +609,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CustomData.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="DirtAnimation.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -939,6 +955,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="StoneAddAnimation.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="StoneEffect.cpp">
       <SubType>
       </SubType>
@@ -1005,6 +1025,10 @@
     </ClCompile>
     <ClCompile Include="Weeds.cpp" />
     <ClCompile Include="WildHorseradish.cpp" />
+    <ClCompile Include="WoodAddAnimaition.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="WoodEffect.cpp">
       <SubType>
       </SubType>
