--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -162,6 +162,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="BakedFish.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="CustomBoard.h">
       <SubType>
       </SubType>
@@ -400,6 +404,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Omelet.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ParsnipSeeds_Shop.h">
       <SubType>
       </SubType>
@@ -617,6 +625,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrowButton.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="BakedFish.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -864,6 +876,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="NpcMove.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Omelet.cpp">
       <SubType>
       </SubType>
     </ClCompile>
