--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -174,6 +174,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DayOffLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DirtAnimation.h">
       <SubType>
       </SubType>
@@ -366,6 +370,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="MineLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Mouse.h">
       <SubType>
       </SubType>
@@ -383,6 +391,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="MoveHouse.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MoveSaloon.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -497,6 +509,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="RendererData.h" />
+    <ClInclude Include="SaloonLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Scythe.h">
       <SubType>
       </SubType>
@@ -637,6 +653,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CustomData.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="DayOffLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -834,6 +854,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="MineLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster.cpp">
       <SubType>
       </SubType>
@@ -855,6 +879,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MoveHouse.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MoveSaloon.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -953,6 +981,10 @@
     <ClCompile Include="PlayerTile.cpp" />
     <ClCompile Include="Potato.cpp" />
     <ClCompile Include="Potato_Seeds.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="SaloonLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
