--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -321,6 +321,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Gus.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Hitter.h">
       <SubType>
       </SubType>
@@ -842,6 +846,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GiftBox.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Gus.cpp">
       <SubType>
       </SubType>
     </ClCompile>
